--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "json-web-token": "^3.2.0",
+    "passport": "^0.7.0",
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
